@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include Mapper.puml
!include ToDTOMapper.puml
!include LongIdMapper.puml
!include StringNameMapper.puml
!include LongVersionMapper.puml

interface CategoryToCategoryDTOMapper extends Mapper, ToDTOMapper {
    + void map(Category source, CategoryDTO target)
    + CategoryDTO mapToDTO(Category category)
}

class SimpleCategoryToCategoryDTOMapper implements CategoryToCategoryDTOMapper {
    - LongIdMapper longIdMapper
    - StringNameMapper stringNameMapper
    - LongVersionMapper longVersionMapper

    + CategoryDTO mapToDTO(Category category)
    + void map(Category category, CategoryDTO categoryDTO)
    - void mapId(Category category, CategoryDTO categoryDTO)
    - void mapName(Category category, CategoryDTO categoryDTO)
    - void mapVersion(Category category, CategoryDTO categoryDTO)
}
SimpleCategoryToCategoryDTOMapper --> LongIdMapper
SimpleCategoryToCategoryDTOMapper --> StringNameMapper
SimpleCategoryToCategoryDTOMapper --> LongVersionMapper
@enduml